--- a/public/src/app/our-story/our-story.component.css
+++ b/public/src/app/our-story/our-story.component.css
@@ -6,7 +6,7 @@ ms-content {
 
 .timeline {
   position: relative;
-  top: -120px;
+  top: -110px;
   width: 100%;
   height: 1500px;
   background: url("./../../assets/trail.svg") no-repeat;
